align and set correct color for intro on careers page

--- a/tbx/static_src/sass/components/_streamfield.scss
+++ b/tbx/static_src/sass/components/_streamfield.scss
@@ -219,9 +219,16 @@
             margin-right: auto;
         }
 
+        &__intro,
         &__paragraph {
             max-width: $wrapper--small;
             margin: 0 auto;
+        }
+
+        &__intro {
+            p {
+                color: var(--color--dark-indigo);
+            }
         }
     }
 }
